@@ -1,5 +1,11 @@
 2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>
 
+	* gtksourceview/gtksourcecontextengine.c: (analyze_line):
+	un-marked the new string as translatable, since strings are
+	frozen.
+
+2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>
+
 	* gtksourceview/language-specs/forth.lang: reverted last commit,
 	need to branch for 2-22 first. Bureaucracy!
 
